[package]
name = "stream_utils"
version = "0.1.0"
authors = ["Thomas BAGREL <tomsb07@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.2"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
pin-project = "1.0"
sqlx = { version = "0.4", features = ["postgres", "runtime-actix-native-tls"] }
hex = "0.4"

serde_utils = { branch = "master", git = "https://github.com/tracipsas/serde_utils" }
